@@ -1,14 +1,13 @@
 package com.epages.readiness.sort;
 
-import com.google.common.collect.ImmutableMap;
-
 import com.epages.readiness.HealthResponse;
 
+import java.util.Map;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.data.web.SortHandlerMethodArgumentResolver;
 import org.springframework.web.method.support.HandlerMethodArgumentResolver;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurerAdapter;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Comparator;
 import java.util.List;
@@ -18,7 +17,7 @@ import static java.util.Comparator.comparing;
 import static java.util.Comparator.comparingLong;
 
 @Configuration
-public class SortConfiguration extends WebMvcConfigurerAdapter {
+public class SortConfiguration implements WebMvcConfigurer {
 
     public static final Comparator<HealthResponse> SORT_BY_SERVICE = comparing(HealthResponse::getService, CASE_INSENSITIVE_ORDER);
 
@@ -28,7 +27,7 @@ public class SortConfiguration extends WebMvcConfigurerAdapter {
 
     @Bean
     public OrderCompare orderCompare() {
-        return new OrderCompare(ImmutableMap.of(
+        return new OrderCompare(Map.of(
                 "status", SORT_BY_STATUS,
                 "totalTimeMillis", SORT_BY_TOTAL_TIME_MILLIS,
                 "service", SORT_BY_SERVICE
